--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Great Vibes, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -2483,6 +2483,41 @@ fieldset:disabled a.btn {
   width: 100%; }
   .btn-block + .btn-block {
     margin-top: 0.5rem; }
+
+
+/* Click to Show Result Box */
+#result-container {
+    display: none; /* Initially hidden */
+    justify-content: center;
+    align-items: center;
+    width: 90%; /* Full width like input field */
+    max-width: 400px;
+    min-height: 60px; /* Bigger than input box */
+    border: 4px solid rgb(212, 202, 104); /* Border color */
+    border-radius: 8px;
+    margin: 7px auto;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    background-color: inherit;
+    padding: 15px;
+    overflow-wrap: break-word; /* Supports multi-line text */
+    word-wrap: break-word;
+    white-space: normal;
+    box-shadow: inset 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Extra responsiveness for mobile */
+@media screen and (max-width: 768px) {
+    #result-container {
+        width: 90%;
+        font-size: 23px; /* Slightly smaller text for mobile */
+        min-height: 90px; /* More space for smaller screens */
+    }
+}
+
+  
+  
 
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
@@ -6500,6 +6535,18 @@ button.bg-dark:focus {
 .my-4 {
   margin-bottom: 1.5rem !important; }
 
+@media screen and (max-width: 768px) {
+    .slider-text h1 {
+        margin-top: -100px !important; /* Adjust margin to move text up */
+        font-size: 1.5rem; /* Adjust font size for better readability */
+    }
+
+    .mb-4 {
+        margin-bottom: 10px !important; /* Reduce bottom margin */
+    }
+}
+
+
 .ml-4,
 .mx-4 {
   margin-left: 1.5rem !important; }
@@ -7995,7 +8042,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family:"Great Vibes", "Playfair Display";
   background: #fff;
   font-size: 16px;
   line-height: 1.8;
